istio/ls_server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd
  labels:
    server: httpd
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      server: httpd
      app: web
  template:
    metadata:
      labels:
        server: httpd
        app: web
    spec:
      containers:
        - name: busybox
          image: busybox
          imagePullPolicy: IfNotPresent
          command: ["bin/sh", "-c", "mkdir -p /var/www;echo 'hello httpd' > /var/www/index.html; httpd -f -p 8080 -h /var/www/" ]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat
  labels:
    server: tomcat
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      server: tomcat
      app: web
  template:
    metadata:
      labels:
        server: tomcat
        app: web
    spec:
      containers:
        - name: busybox
          image: busybox
          imagePullPolicy: IfNotPresent
          command: [ "bin/sh", "-c", "mkdir -p /var/www;echo 'hello tomcat' > /var/www/index.html; httpd -f -p 8080 -h /var/www/" ]
