istio/ls_svc_vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: web-svc-vs
spec:
  hosts:
  - web-svc
  http:
    - route:
      - destination:
          host: tomcat-svc
        weight: 80
      - destination:
          host: httpd-svc
        weight: 20
